[tool.poetry]
name = "starlite-sessions"
version = "1.1.0"
description = "Starlite Sessions Toolkit"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
maintainers = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>", "Peter Schutt <peter.github@proton.me>", "Cody Fincher <cody.fincher@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/starlite-api/starlite-sessions"
repository = "https://github.com/starlite-api/starlite-sessions"
documentation = "https://starlite-api.github.io/starlite-sessions"
keywords = ["starlite", "auth", "authentication", "session", "cookie"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
include = ["CHANGELOG.md"]
packages = [
    { include = "starlite_sessions" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
starlite = ">=1.17.1"

[tool.poetry.dev-dependencies]
mkdocs_gen_files = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
starlite = {version = ">=1.17.1", extras = ["full"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.MESSAGE_CONTROL]
disable = [
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
]
enable = "useless-suppression"
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.REPORTS]
reports = "no"

[tool.pylint.FORMAT]
max-line-length = "120"

[tool.pylint.VARIABLES]
ignored-argument-names = "args|kwargs|_|__"

[tool.pylint.BASIC]
good-names = "_,__,i,e"
no-docstring-rgx="(__.*__|main|test.*|.*test|.*Test|^_.*)$"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pycln]
all = true

[tool.pyright]
include = ["starlite_sessions", "tests"]
exclude = []
